--- a/demo.tex
+++ b/demo.tex
@@ -14,7 +14,7 @@
 
 \section{Hello World!} % creates a section
 
-\textbf{Hello World!} Today I am learning \LaTeX. %notice how the command will end at the first non-alphabet charecter such as the . after \LaTeX
+\textbf{Hello World! Let's See!} Today I am learning \LaTeX. %notice how the command will end at the first non-alphabet charecter such as the . after \LaTeX
 \LaTeX{} is a great program for writing math. I can write in line math such as $a^2+b^2=c^2$ %$ tells LaTexX to compile as math
 . I can also give equations their own space:
 \begin{equation} % Creates an equation environment and is compiled as math
